--- a/app/assets/stylesheets/scaffolds.css.scss
+++ b/app/assets/stylesheets/scaffolds.css.scss
@@ -1,5 +1,5 @@
 body {
-  background-color: #fff;
+ // background-color: #fff;
   color: #333;
   font-family: verdana, arial, helvetica, sans-serif;
   font-size: 13px;
@@ -36,7 +36,7 @@ div {
   display: table; }
 
 #error_explanation {
-  width: 450px;
+  width: 380px;
   border: 2px solid red;
   padding: 7px;
   padding-bottom: 0;
