--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,5 +1,6 @@
 <%= form_for(@user) do |f| %>
   <% if @user.errors.any? %>
+	
     <div id="error_explanation">
       <h2><%= pluralize(@user.errors.count, "error") %> prohibited this user from being saved:</h2>
 
@@ -10,24 +11,24 @@
       </ul>
     </div>
   <% end %>
-
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.text_field :email %>
-  </div>
-  <div class="field">
-    <%= f.label :password %><br />
-    <%= f.text_field :password %>
-  </div>
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation %>
-  </div>
-  <div class="field">
-    <%= f.label :institution %><br />
-    <%= f.password_field :institution %>
-  </div>
-  <div class="actions">
-    <%= f.submit %>
-  </div>
+	
+	<ul class="title_data">
+		<li>
+		    <%= f.label :email %>
+		    <%= f.text_field :email, :autofocus => true %>	
+		</li>
+		<li>
+		    <%= f.label :password %>
+		    <%= f.password_field :password %>
+		</li>
+		<li>
+		    <%= f.label :password_confirmation, "Password again" %>
+		    <%= f.password_field :password_confirmation %>
+		</li>
+		<li>
+		    <%= f.label :institution %>
+		    <%= f.text_field :institution %>
+		</li>
+	</ul>
+	<%= f.submit "Create Account!" %>
 <% end %>
