bg color now works

--- a/app/views/events/graph.html.erb
+++ b/app/views/events/graph.html.erb
@@ -9,6 +9,15 @@
 	var event_id = <%= @event.id %>
 	var poll_id = <%= params[:poll_id] %>
 </script>
+<style>
+
+	body {
+		
+		background-color: <%= @event.options[:bg_color] %> !important;
+		
+	}
+
+</style>
 <%= csrf_meta_tags %>
 </head>
 <body class="graph">
