--- a/app/views/layouts/outside.html.erb
+++ b/app/views/layouts/outside.html.erb
@@ -1,11 +1,20 @@
-<!DOCTYPE html>
-<html>
+<!doctype html>
 <head>
-  <title>Pollster</title>
-  <%= stylesheet_link_tag "reset", "text", "formalize", "outside" %>
+	<!--[if IE]><meta http-equiv="refresh" content="0;URL=/ie.html"><![endif]-->
+	<meta charset="UTF-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+	
+	<title>Pollster</title>
+	<link type="text/plain" rel="author" href="/humans.txt" />
+
 	<link href='http://fonts.googleapis.com/css?family=Carter+One&v2' rel='stylesheet' type='text/css'>
-  <%= javascript_include_tag "outside" %>
+	
+	<%= stylesheet_link_tag "reset", "text", "formalize", "outside" %>
+	<%= javascript_include_tag "outside" %>
+	
+	
 </head>
+
 <body>
 	<h1 class="logo">Pollster</h1>
 	<p class="slogan">A little project for [NICE TEXT HERE]</p>
@@ -19,5 +28,21 @@
 			
 		</div>
 	</div>
+
+
+
+
+	<!--[if lt IE 7 ]>
+	<script src="js/libs/dd_belatedpng.js"></script>
+	<script> DD_belatedPNG.fix('img, .png_bg');</script>
+	<![endif]-->
+		
+	<script>
+		var _gaq=[['_setAccount','UA-XXXXX-X'],['_trackPageview']]; // Change UA-XXXXX-X to be your site's ID
+		(function(d,t){var g=d.createElement(t),s=d.getElementsByTagName(t)[0];g.async=1;
+		g.src=('https:'==location.protocol?'//ssl':'//www')+'.google-analytics.com/ga.js';
+		s.parentNode.insertBefore(g,s)}(document,'script'));
+	</script>
+	
 </body>
 </html>
