now using faye-rails gem to make faye work with ruby 1.9.3

--- a/app/assets/stylesheets/button.css.scss.erb
+++ b/app/assets/stylesheets/button.css.scss.erb
@@ -45,7 +45,7 @@ a.vote_button {
 	}
 	
 	&.checked {
-		background-image: url("/check.png")	!important;
+		background-image: url("<%= asset_path("check.png") %>")	!important;
 		background-repeat: no-repeat				!important;
 		background-position: bottom right 	!important;
 	}
