--- a/app/views/layouts/outside.html.erb
+++ b/app/views/layouts/outside.html.erb
@@ -1,6 +1,6 @@
 <!doctype html>
 <head>
-	<!--[if IE]><meta http-equiv="refresh" content="0;URL=/ie.html"><![endif]-->
+	<!--[if lt IE 7 ]><meta http-equiv="refresh" content="0;URL=/ie.html"><![endif]-->
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 	
@@ -9,8 +9,7 @@
 
 	<link href='http://fonts.googleapis.com/css?family=Carter+One&v2' rel='stylesheet' type='text/css'>
 	
-	<%= stylesheet_link_tag "reset", "text", "formalize", "outside" %>
-	<%= javascript_include_tag "outside" %>
+	<%= stylesheet_link_tag "outside" %>
 	
 	
 </head>
