--- a/app/assets/stylesheets/in_app.css.scss.erb
+++ b/app/assets/stylesheets/in_app.css.scss.erb
@@ -1,7 +1,7 @@
 body {
 	margin:0;
 	background-color:#eee;
-	background-image: url('/green-fibers.png');
+	background-image: url('<%= asset_path("green-fibers.png") %>');
 }
 header {
 	width:100%;
