--- a/app/assets/stylesheets/outside.css.scss.erb
+++ b/app/assets/stylesheets/outside.css.scss.erb
@@ -1,7 +1,17 @@
+/*
+ * This is a manifest file that'll automatically include all the stylesheets available in this directory
+ * and any sub-directories. You're free to add application-wide styles to this file and they'll appear at
+ * the top of the compiled file, but it's generally better to create a new file per style scope.
+ *= require reset
+ *= require text
+ *= require formalize
+ *= require_self
+*/
+
 body {
 	margin:0;
 	background-color:#eee;
-	background-image: url('/green-fibers.png');
+	background-image: url('<%= asset_path("green-fibers.png") %>');
 }
 h1.logo {
 	font-size:60px;
