changed manifest comments to allow js files to be precompiled

--- a/app/views/events/graph.html.erb
+++ b/app/views/events/graph.html.erb
@@ -3,7 +3,7 @@
 <head>
   <%= stylesheet_link_tag "application" %>
 <!-- CHANGE= -->
-  <%= javascript_include_tag "graph", "http://#{request.host}:9292/faye.js" %>
+  <%= javascript_include_tag "graph" %>
   <!-- loads additional styles specified in manifest.json -->
 <script>
 	var event_id = <%= @event.id %>
