slogan text update

--- a/app/views/layouts/outside.html.erb
+++ b/app/views/layouts/outside.html.erb
@@ -16,7 +16,7 @@
 
 <body>
 	<h1 class="logo">Pollster</h1>
-	<p class="slogan">A little project for [NICE TEXT HERE]</p>
+	<p class="slogan">A little project for audience participation.</p>
 	
 	<div class="container">
 		<div class="content">
