changed front page

--- a/app/assets/stylesheets/outside.css.scss.erb
+++ b/app/assets/stylesheets/outside.css.scss.erb
@@ -66,3 +66,40 @@ ul.title_data.small li {width:280px;}
 form input[type=submit] {
 	float:right;
 }
+
+
+
+// INFO
+
+div.info {
+	border-top:1px dashed #293133;
+	margin-left: auto;
+	margin-right: auto;
+	width: 850px;
+	padding-top:40px;
+	margin-bottom:40px;
+	color: white;
+	div.pictures {
+		position:relative;
+	}
+	img.browser {
+		
+	}
+	img.iphone_vote {
+		position:absolute;
+		bottom:-10px;
+		right:-30px;
+	}
+	
+	div.copy {
+		font-family: "HelveticaNeueW01-Thin","HelveticaNeue-Light","Helvetica Neue Light",Helvetica,Arial,sans-serif;	
+		text-align: center; 
+		h2 {font-weight: normal; font-family: "HelveticaNeueW01-Thin","HelveticaNeue-Light","Helvetica Neue Light",Helvetica,Arial,sans-serif;}
+	}
+	ul {
+		width: 500px;
+		text-align:left;
+		margin-left:auto;
+		margin-right:auto;
+	}
+}
