--- a/app/views/layouts/outside.html.erb
+++ b/app/views/layouts/outside.html.erb
@@ -16,7 +16,7 @@
 
 <body>
 	<h1 class="logo">Pollster</h1>
-	<p class="slogan">A little project for audience participation.</p>
+	<p class="slogan">A tool for enabling audience participation.</p>
 	
 	<div class="container">
 		<div class="content">
@@ -28,9 +28,45 @@
 		</div>
 	</div>
 
+	<div class="info">
+		<div class="copy">
+			<h2>A web-based clicker system</h2>
+			<p>
+				Create an account. Start an event. Share the event url with your audience. Done.<br/>
+				Ready to ask some questions.<br/><br/>
+			</p>
+			<!--<h2>Swiftly set up polls and let your audience take part.</h2>
+			<p>
+				By setting up a pollster event, you can create and ask questions to your audience on the fly without having to plan ahead or set up.<br/>
+				It is only a matter of choosing the number of choices 2, 3 or 4.
+			</p>-->
+		</div>
+		<div class="pictures">
+			<%= image_tag("graph.png", class: "browser") %>
+			<%= image_tag("iphone_vote.png", class: "iphone_vote") %>
+		</div>
+		<div class="copy">
+			<h2>Details</h2>
+			<p>
+				<ul>
+					<li>
+						A speaker will login at this page and bring up the presenter view, ready to be used with a presentaition.
+					</li>
+					<li>
+						Audience members will visit the URL specified by the presenter, using their device of choice, thereby presenting 2, 3 or 4 options.
+					</li>
+					<li>
+						When a user click on an option the presnter's view will immediatly be updated, showing a live view of votes arriving.
+					</li>
+					<li>
+						A presenter can with one click go on to another question and choose the amount of options presented to the user.
+					</li>
+				</ul>  
+			</p>
+		</div>
+	</div>
 
-
-
+<br/>
 	<!--[if lt IE 7 ]>
 	<script src="js/libs/dd_belatedpng.js"></script>
 	<script> DD_belatedPNG.fix('img, .png_bg');</script>
