--- a/app/views/layouts/outside.html.erb
+++ b/app/views/layouts/outside.html.erb
@@ -16,7 +16,6 @@
 
 <body>
 	<h1 class="logo">Pollster</h1>
-	<p class="slogan">A tool for enabling audience participation.</p>
 	
 	<div class="container">
 		<div class="content">
@@ -32,8 +31,8 @@
 		<div class="copy">
 			<h2>A web-based clicker system</h2>
 			<p>
-				Create an account. Start an event. Share the event url with your audience. Done.<br/>
-				Ready to ask some questions.<br/><br/>
+				Create an account. Start an event. Share the event url with your audience.<br/>
+				Ready to poll.<br/><br/>
 			</p>
 			<!--<h2>Swiftly set up polls and let your audience take part.</h2>
 			<p>
@@ -56,7 +55,7 @@
 						Audience members will visit the URL specified by the presenter, using their device of choice, thereby presenting 2, 3 or 4 options.
 					</li>
 					<li>
-						When a user click on an option the presnter's view will immediatly be updated, showing a live view of votes arriving.
+						When a user clicks on an option the presnter's view will immediatly be updated, showing a live view of votes arriving.
 					</li>
 					<li>
 						A presenter can with one click go on to another question and choose the amount of options presented to the user.
